# mfb_webapp_backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  response_data.json
api/v1/: api.py  config.py
api/v1/auth/: auth_routes.py  auth_security.py  models.py  req_validate.py
api/v1/fund_families/: fund_families_routes.py
api/v1/funds/: fund_families.json  fund_routes.py  models.py
api/v1/portfolio/: portfolio_routes.py
api/v1/services/: mongo.py  rapidapi_mutfund.py
